audios were not working correctly on firefox - fixed

--- a/Modules/css/style.css
+++ b/Modules/css/style.css
@@ -200,7 +200,7 @@ body .hdr--sticky-active .navbar-brand{
 
 .section__bg{
 	background-color:#ededed;
-	padding:80px 0 60px;
+	padding:80px 0;
 }
 .begin__img img{
 	border: 1px solid #CCC;
